Fix missing color in header

--- a/src/shared/components/Header/Header.scss
+++ b/src/shared/components/Header/Header.scss
@@ -44,6 +44,7 @@
       height: 100%;
       border-radius: 0 !important;
       padding: 5px 30px;
+      background-color: $fusion-daybreak-7;
 
       span {
         user-select: none;
